testdata/patch-sources/compile-error/com/example/Bad.java
package com.example;

public class Bad {
    public String broken() {
        return "oops"
    }
}
